k8s/ingress/gke_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
    kubernetes.io/ingress.global-static-ip-name: "traefik-ip"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: tacomawatersheds.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: stormpiper-prod
            port:
              number: 80
  - host: www.tacomawatersheds.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: stormpiper-prod
            port:
              number: 80
  - host: dev.tacomawatersheds.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: stormpiper-dev
            port:
              number: 80
